pull in our lists.js in tests. --ch14l010--

--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -16,6 +16,7 @@
   </div>
 
   <script src="../jquery-3.3.1.min.js"></script>
+  <script src="../list.js"></script>
   <script src="qunit-2.6.0.js"></script>
 
   <script>
