--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -54,17 +54,21 @@ QUnit.testDone(function () {
 });
 
 QUnit.test("should call updateItems on initialize", function (assert) {
-  var url = '/getitems/';
+  var params = {
+    listApiUrl: '/list/api/x/',
+    itemsApiUrl: '/items/api/url/',
+    listId: 7
+  };
   sandbox.spy(window.Superlists, 'updateItems');
-  window.Superlists.initialize(url);
+  window.Superlists.initialize(params);
   assert.equal(
     window.Superlists.updateItems.lastCall.args,
-    url
+    params.listApiUrl
   );
 });
 
 QUnit.test("updateItems should get correct url by ajax", function (assert) {
-  var url = '/getitems/';
+  var url = '/given/api/url';
   window.Superlists.updateItems(url);
 
   assert.equal(server.requests.length, 1);
@@ -74,11 +78,11 @@ QUnit.test("updateItems should get correct url by ajax", function (assert) {
 });
 
 QUnit.test("updateItems should fill in lists table from ajax response", function (assert) {
-  var url = '/getitems/';
-  var responseData = [
-    {'id': 101, 'text': 'item 1 text'},
-    {'id': 102, 'text': 'item 2 text'},
-  ];
+  var url = '/given/api/url';
+  var responseData = {id: 7, items: [
+    {id: 101, list: 3, text: 'item 1 text'},
+    {id: 102, list: 3, text: 'item 2 text'},
+  ]};
   server.respondWith('GET', url, [
     200, {"Content-Type": "application/json"}, JSON.stringify(responseData)
   ]);
@@ -96,8 +100,12 @@ QUnit.test("updateItems should fill in lists table from ajax response", function
 
 
 QUnit.test("should intercept form submit and do ajax post", function (assert) {
-  var url = '/listitemsapi/';
-  window.Superlists.initialize(url);
+  var params = {
+    listApiUrl: '/list/api/x/',
+    itemsApiUrl: '/items/api/url/',
+    listId: 7
+  };
+  window.Superlists.initialize(params);
 
   $('#id_item_form input[name="text"]').val('user input');
   $('#id_item_form input[name="csrfmiddlewaretoken"]').val('tokeney');
@@ -105,24 +113,28 @@ QUnit.test("should intercept form submit and do ajax post", function (assert) {
 
   assert.equal(server.requests.length, 2);
   var request = server.requests[1];
-  assert.equal(request.url, url);
+  assert.equal(request.url, params.itemsApiUrl);
   assert.equal(request.method, "POST");
   assert.equal(
     request.requestBody,
-    'text=user+input&csrfmiddlewaretoken=tokeney'
+    'list=7&text=user+input&csrfmiddlewaretoken=tokeney'
   );
 });
 
 
 QUnit.test("should call updateItems after successful post", function (assert) {
-  var url = '/listitemsapi/';
-  window.Superlists.initialize(url);
+  var params = {
+    listApiUrl: '/list/api/x/',
+    itemsApiUrl: '/items/api/url/',
+    listId: 7
+  };
+  window.Superlists.initialize(params);
   var response = [
     201,
     {"Content-Type": "application/json"},
     JSON.stringify({}),
   ];
-  server.respondWith('POST', url, response);
+  server.respondWith('POST', params.itemsApiUrl, response);
   $('#id_item_form input[name="text"]').val('user input');
   $('#id_item_form input[name="csrfmiddlewaretoken"]').val('tokeney');
   $('#id_item_form').submit();
@@ -132,7 +144,7 @@ QUnit.test("should call updateItems after successful post", function (assert) {
 
   assert.equal(
     window.Superlists.updateItems.lastCall.args,
-    url
+    params.listApiUrl
   );
 });
 
@@ -144,9 +156,13 @@ QUnit.test("should not intercept form submit if no api url passed in", function 
 
 
 QUnit.test("should display errors on post failure", function (assert) {
-  var url = '/listitemsapi/';
-  window.Superlists.initialize(url);
-  server.respondWith('POST', url, [
+  var params = {
+    listApiUrl: '/list/api/x/',
+    itemsApiUrl: '/items/api/url/',
+    listId: 7
+  };
+  window.Superlists.initialize(params);
+  server.respondWith('POST', params.itemsApiUrl, [
     400,
     {"Content-Type": "application/json"},
     JSON.stringify({'error': 'something is amiss'})
@@ -162,8 +178,12 @@ QUnit.test("should display errors on post failure", function (assert) {
 
 
 QUnit.test("should hide errors on post success", function (assert) {
-  var url = '/listitemsapi/';
-  window.Superlists.initialize(url);
+  var params = {
+    listApiUrl: '/list/api/x/',
+    itemsApiUrl: '/items/api/url/',
+    listId: 7
+  };
+  window.Superlists.initialize(params);
   var response = [
     201,
     {"Content-Type": "application/json"},
