Changes to specrunner. --ch16l006--

--- a/src/lists/static/tests/SpecRunner.html
+++ b/src/lists/static/tests/SpecRunner.html
@@ -14,12 +14,10 @@
   <script src="lib/jasmine-4.6.1/boot1.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="../lists.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="Spec.js"></script>
 
 </head>
 
