--- a/src/lists/static/tests/SpecRunner.html
+++ b/src/lists/static/tests/SpecRunner.html
@@ -7,6 +7,10 @@
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-4.6.1/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-4.6.1/jasmine.css">
 
+  <!-- Bootstrap so visibility tests work -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
   <script src="lib/jasmine-4.6.1/jasmine.js"></script>
   <script src="lib/jasmine-4.6.1/jasmine-html.js"></script>
   <script src="lib/jasmine-4.6.1/boot0.js"></script>
