--- a/src/lists/static/tests/SpecRunner.html
+++ b/src/lists/static/tests/SpecRunner.html
@@ -7,11 +7,15 @@
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-4.6.1/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-4.6.1/jasmine.css">
 
+  <!-- Bootstrap CSS -->
+  <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
   <script src="lib/jasmine-4.6.1/jasmine.js"></script>
   <script src="lib/jasmine-4.6.1/jasmine-html.js"></script>
   <script src="lib/jasmine-4.6.1/boot0.js"></script>
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-4.6.1/boot1.js"></script>
+
 
   <!-- include source files here... -->
   <script src="../lists.js"></script>
